--- a/src/compile.lsp.in
+++ b/src/compile.lsp.in
@@ -156,29 +156,31 @@ ar -r ../@LIBPREFIX@ecl.@LIBEXT@ *.@OBJEXT@ ../c/all_symbols2.@OBJEXT@; rm *.@OB
 ;;;
 
 #+WANTS-CLX
-(build-module "clx"
-	      '("src:clx;package.lisp"
-		"src:clx;depdefs.lisp"
-		"src:clx;clx.lisp"
-		"src:clx;dependent.lisp"
-		"src:clx;macros.lisp"
-		"src:clx;bufmac.lisp"
-		"src:clx;buffer.lisp"
-		"src:clx;display.lisp"
-		"src:clx;gcontext.lisp"
-		"src:clx;input.lisp"
-		"src:clx;requests.lisp"
-		"src:clx;fonts.lisp"
-		"src:clx;graphics.lisp"
-		"src:clx;text.lisp"
-		"src:clx;attributes.lisp"
-		"src:clx;translate.lisp"
-		"src:clx;keysyms.lisp"
-		"src:clx;manager.lisp"
-		"src:clx;image.lisp"
-		"src:clx;resource.lisp")
-	      :dir "build:clx;"
-	      :prefix "CLX")
+(let ((+clx-src-files+ '("src:clx;package.lisp"
+			 "src:clx;depdefs.lisp"
+			 "src:clx;clx.lisp"
+			 "src:clx;dependent.lisp"
+			 "src:clx;macros.lisp"
+			 "src:clx;bufmac.lisp"
+			 "src:clx;buffer.lisp"
+			 "src:clx;display.lisp"
+			 "src:clx;gcontext.lisp"
+			 "src:clx;input.lisp"
+			 "src:clx;requests.lisp"
+			 "src:clx;fonts.lisp"
+			 "src:clx;graphics.lisp"
+			 "src:clx;text.lisp"
+			 "src:clx;attributes.lisp"
+			 "src:clx;translate.lisp"
+			 "src:clx;keysyms.lisp"
+			 "src:clx;manager.lisp"
+			 "src:clx;image.lisp"
+			 "src:clx;resource.lisp"))
+      #+:msvc
+      (c::*cc-flags* (concatenate 'string c::*cc-flags* " -Zm150")))
+  (pushnew :clx-ansi-common-lisp *features*)
+  (mapcar #'load +clx-src-files+)
+  (build-module "clx" +clx-src-files+ :dir "build:clx;" :prefix "CLX"))
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;;;
