--- a/src/doc/Makefile.in
+++ b/src/doc/Makefile.in
@@ -113,10 +113,8 @@ index.html: $(srcdir)/index.in.html head
 	cat head $(srcdir)/index.in.html $(srcdir)/end | $(FILTER) > $@
 install.html: $(srcdir)/install.in.html head
 	cat head $(srcdir)/install.in.html $(srcdir)/end | $(FILTER) > $@
-news.html: $(srcdir)/news.in.html head
-	(cat head; sed -e '/^----.*$$/,$$d' $(srcdir)/news.in.html; \
-	 sed -e '1,/^ECL [0-9\.]*$$/d;/^===*$$/d' $(srcdir)/../../ANNOUNCEMENT| sed -e '1d'; \
-	 sed -e '1,/^----*$$/d' $(srcdir)/news.in.html; \
+news.html: head
+	(cat head; echo '<pre>'; cat $(srcdir)/../../ANNOUNCEMENT| sed -e '1d'; echo '</pre>' \
 	 cat $(srcdir)/end) | $(FILTER) > $@
 benchmark.html: $(srcdir)/benchmark.in.html ../gabriel/BENCHMARK head
 	(cat head; cat $(srcdir)/benchmark.in.html; \
