--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -101,8 +101,8 @@ BUILD-STAMP: config.status
 	echo "#" `uname -a` > $@
 	head -8 config.log | tail -6 >> $@
 install: BUILD-STAMP install-base
-	cd c; $(MAKE) prefix=$(prefix) install
-	cd doc; $(MAKE) prefix=$(prefix) install
+	cd c; $(MAKE) prefix=$(prefix) DESTDIR=$(DESTDIR) install
+	cd doc; $(MAKE) prefix=$(prefix) DESTDIR=$(DESTDIR) install
 install-base:
 	$(mkinstalldirs) $(DESTDIR)$(bindir) $(DESTDIR)$(libdir)/h
 	for i in $(TARGETS); do \
@@ -112,16 +112,16 @@ install-base:
 	for i in BUILD-STAMP help.doc ; do \
 	  $(INSTALL_DATA) $$i $(DESTDIR)$(libdir); \
 	done
-	for i in $(LSP_LIBRARIES) $(LIBRARIES) c/dpp* ; do \
-	  $(INSTALL_PROGRAM) $$i $(DESTDIR)$(libdir); \
+	for i in $(LSP_LIBRARIES) $(LIBRARIES) c/dpp* ecl_min*; do \
+	  test -s $$i && $(INSTALL_PROGRAM) $$i $(DESTDIR)$(libdir) || : ; \
 	done
 	for i in $(ECL_MODULES); do \
 	  $(INSTALL_PROGRAM) $$i.fas $(DESTDIR)$(libdir); \
 	done
 flatinstall: BUILD-STAMP
-	$(MAKE) bindir=$(prefix) libdir=$(prefix) install-base
-	cd c; $(MAKE) prefix=$(prefix) flatinstall
-	cd doc; $(MAKE) prefix=$(prefix) docdir=$(prefix)/doc flatinstall
+	$(MAKE) DESTDIR=$(DESTDIR) bindir=$(prefix) libdir=$(prefix) install-base
+	cd c; $(MAKE) DESTDIR=$(DESTDIR) prefix=$(prefix) flatinstall
+	cd doc; $(MAKE) DESTDIR=$(DESTDIR) prefix=$(prefix) docdir=$(prefix)/doc flatinstall
 
 uninstall:
 	for i in $(TARGETS) ecl-config; do $(RM) $(DESTDIR)$(bindir)/$$i; done
@@ -137,7 +137,7 @@ clean: clean_lisp
 	$(RM) config.version config.log config.cache
 	$(RM) *.c *.o *.a *.h *.data *.fas
 clean_lisp:
-	for i in lsp cmp clos clx tk; do $(RM) lib$$i.a $$i/?*.{o,dat,c,sdat,h,fas}; done
+	for i in lsp cmp clos clx tk; do $(RM) lib$$i.a $$i/?*.{o,data,c,sdat,h,fas}; done
 	$(RM) help.doc
 distclean: clean
 realclean: distclean
