- Properly set and use :cross feature

--- a/src/lsp/load.lsp.in
+++ b/src/lsp/load.lsp.in
@@ -1,12 +1,10 @@
 ;;; @configure_input@
 
-(if (not (member "CROSS" *features* :test #'string-equal))
-  (progn
-    (load "src:lsp;export.lsp" :verbose nil)
-    (load "src:lsp;defmacro.lsp" :verbose nil)
-    (load "src:lsp;helpfile.lsp" :verbose nil)
-    (load "src:lsp;evalmacros.lsp" :verbose nil)
-    (load "src:lsp;cmuutil.lsp" :verbose nil)))
+(load "src:lsp;export.lsp" :verbose nil)
+(load "src:lsp;defmacro.lsp" :verbose nil)
+(load "src:lsp;helpfile.lsp" :verbose nil)
+(load "src:lsp;evalmacros.lsp" :verbose nil)
+(load "src:lsp;cmuutil.lsp" :verbose nil)
 
 (sys:*make-constant '+lisp-module-files+
 '("src:lsp;export.lsp"
@@ -45,5 +43,4 @@
   "src:lsp;mp.lsp"
 ))
 
-#-cross
 (mapc #'(lambda (x) (load x :verbose nil)) (cddddr +lisp-module-files+))
