--- a/src/compile.lsp.in
+++ b/src/compile.lsp.in
@@ -10,6 +10,7 @@
 ;;;
 
 (setq *package* (find-package "SYSTEM"))
+@PUSH_CROSS_FEATURES@
 
 ;;;
 ;;; * Ensure that we have the whole of Common-Lisp to compile
