New functions for performing type inference. Arithmetic operators *,+,/,- now have simple optimizers. Fixed several "bugs" in the C code to let ECL compile with GCC 4.0

--- a/src/cmp/load.lsp.in
+++ b/src/cmp/load.lsp.in
@@ -28,6 +28,7 @@
   "src:cmp;cmpwt.lsp"
   "src:cmp;cmpffi.lsp"
   "src:cmp;cmpct.lsp"
+  "src:cmp;cmpnum.lsp"
   "build:cmp;cmpcfg.lsp"
   "src:cmp;cmpmain.lsp"))
 
