- Removed traces of :WANTS-CLOS (CLOS has to be always loaded for it   is needed by compiler).

--- a/src/bare.lsp.in
+++ b/src/bare.lsp.in
@@ -34,7 +34,7 @@
 ;;;
 (setf sys::*gc-verbose* nil)
 (print *features*)
-#+(or (and wants-clos ecl-min) cross)
+#+(or ecl-min cross)
 (load "clos/load.lsp")
 #+cmu-format
 (load "src:lsp;format.lsp" :verbose nil)
