- Moved setting *features* for ecl_min to compile.lsp - Added possibility of compiling --without-cmp (for cross-compilation)

--- a/src/compile.lsp.in
+++ b/src/compile.lsp.in
@@ -10,7 +10,7 @@
 ;;;
 
 (setq *package* (find-package "SYSTEM"))
-@PUSH_CROSS_FEATURES@
+(setq *features* @LSP_FEATURES@)
 
 ;;;
 ;;; * Ensure that we have the whole of Common-Lisp to compile
