- Added :wants-dlopen build-time feature, changed conditionals accordingly - Got rid of @ECL_MODULES@ in favor of :wants-something features - Build compiler with build-module from bare.lsp - Added variable *static-modules* where modules built statically into ecl are   pushed by build-module - Make build-module work without :wants-dlopen - Moved dlopen-dependent variables to bottom of symbols list to make compiling   static ecl with dynamic one possible; TODO: make built ecl independent of   features compiled in native ecl when cross-compiling

--- a/src/bare.lsp.in
+++ b/src/bare.lsp.in
@@ -42,6 +42,11 @@
 ;;;
 ;;; * Load the compiler.
 ;;;
+
+;; Make sure compiler sees what it should see.
+#-:wants-dlopen (setq *features* (delete :dlopen *features*))
+#+:wants-dlopen (push :dlopen *features*)
+
 #-threads
 (defmacro c::with-lock ((lock) &body body)
   `(progn ,@body))
@@ -67,15 +72,16 @@
 		object))
 	  sources))
 
+(defvar *static-modules* nil)
+
 (defun build-module (name sources &key (dir "build:") ((:prefix si::*init-function-prefix*) "EXT"))
   (proclaim '(optimize (safety 2) (speed 1)))
   (let* ((objects (compile-if-old dir sources :system-p t :c-file t :data-file t :h-file t))
 	 (name (string-downcase name)))
-    #-dlopen
-    (warn "~%Unable to build module ~A because dynamic linking is not available on this platform"
-	  name)
-    #+dlopen
-    (c::build-fasl name :lisp-files objects)))
+    (#-:wants-dlopen c::build-static-library 
+     #+:wants-dlopen c::build-fasl
+     name :lisp-files objects)
+    #-:wants-dlopen (push (intern name) *static-modules*))) ; kludge?
 
 
 ;;;
