--- a/src/configure.in
+++ b/src/configure.in
@@ -153,7 +153,6 @@ AC_SUBST(SUBDIRS, [c])          dnl Subdirectories that make should process
 AC_SUBST(LIBRARIES, [])         dnl GMP, Boehm's GC, etc
 AC_SUBST(LSP_LIBRARIES)         dnl Libraries produced by lisp translator
 AC_SUBST(LSP_FEATURES, ['*features*']) dnl Symbols to add to *FEATURES* for conditional compilation
-AC_SUBST(ECL_MODULES, [])       dnl Contributed modules to be built in
 
 
 dnl -----------------------------------------------------------------------
@@ -390,6 +389,7 @@ dnl Lisp library and libecl features
 if test ${enable_shared} = "yes"; then
   AC_DEFINE(ENABLE_DLOPEN, [1], [Allow loading dynamically linked code])
   LSP_LIBRARIES="${SHAREDPREFIX}ecl.${SHAREDEXT}"
+  ECL_ADD_FEATURE([wants-dlopen])
 else
   LSP_LIBRARIES="${LIBPREFIX}ecl.${LIBEXT}"
   LDRPATH='~*'
