--- a/src/bare.lsp.in
+++ b/src/bare.lsp.in
@@ -72,16 +72,20 @@
 		object))
 	  sources))
 
-(defvar *static-modules* nil)
+(defvar *module-symbols* nil)
+(defvar *module-files* nil)
 
-(defun build-module (name sources &key (dir "build:") ((:prefix si::*init-function-prefix*) "EXT"))
+(defun build-module (name sources &key additional-files
+                     (dir "build:") ((:prefix si::*init-function-prefix*) "EXT"))
   (proclaim '(optimize (safety 2) (speed 1)))
   (let* ((objects (compile-if-old dir sources :system-p t :c-file t :data-file t :h-file t))
 	 (name (string-downcase name)))
-    (#-:wants-dlopen c::build-static-library 
-     #+:wants-dlopen c::build-fasl
-     name :lisp-files objects)
-    #-:wants-dlopen (push (intern name) *static-modules*))) ; kludge?
+    (push (#-:wants-dlopen c::build-static-library 
+           #+:wants-dlopen c::build-fasl
+           name :lisp-files objects) *module-files*)
+    (when additional-files
+      (setf *module-files* (nconc additional-files *module-files*)))
+    #-:wants-dlopen (push (intern name) *module-symbols*))) ; kludge?
 
 
 ;;;
